EduFlex LLP v3.2.0: Fixed database constraint, implemented Global Library live data, and performed large-scale backend cleanup.